# engram

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml  registry.example.json  requirements.txt
.github/workflows/: ci.yml
docs/: trailer.html
engram/: __init__.py  __main__.py  add_video.py  build_brain.py  build_graph.py  build_topic_index.py  core.py  coverage_audit.py  fetch.py  graph_template.html  polarity_audit.py  query.py  registry.py  scaffold.py  serve.py
examples/codeaesthetic/: README.md  SKILL.md  atoms.jsonl  edges.jsonl  graph.html
examples/codeaesthetic/references/: knowledge.md
examples/codeaesthetic/references/topics/: craft.md  dependency-injection.md  functional.md  performance.md  philosophy.md
examples/codeaesthetic/sources/: manifest.json
examples/demo-brain/: SKILL.md  _stage.json  _stage_debugging.json  atoms.jsonl  edges.jsonl  graph.html
examples/demo-brain/references/: knowledge.md
examples/demo-brain/references/topics/: debugging.md  focus.md  shipping.md
examples/demo-brain/sources/: manifest.json
examples/demo-brain/sources/transcripts/: ada-debugging.txt  ada-focus.txt  ada-shipping.txt
launch/: creator-outreach.md  show-hn.md  social.md
tests/: conftest.py  test_add_video.py  test_cli.py  test_commands.py  test_core.py  test_pipeline.py
